add UI tests and Allure-report